--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <p class="two-columns__brief">Главные проблемы в обучении</p>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты.
               Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
@@ -36,37 +36,37 @@
         <div class="table">
           <div class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
-            <p class="teable__text">Число нейронов в мозге человека</p>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </div>
           <div class="table__cell">
             <h3 class="table__heading">2.1 миллиарда</h3>
-            <p class="teable__text">Число нуждающихся в повышении квалификации
-              Всемирный Банк, 2017</p>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>  
           </div>
           <div class="table__cell">
             <h3 class="table__heading">1000 терабайт</h3>
-            <p class="teable__text">Объём памяти человека</p>
+            <p class="table__text">Объём памяти человека</p>
           </div>
           <div class="table__cell">
             <h3 class="table__heading">500 триллионов</h3>
-            <p class="teable__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
           <div class="table__cell">
             <h3 class="table__heading">420 миллионов</h3>
-            <p class="teable__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства
-              Всемирный Банк, 2017</p>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>   
           </div>
           <div class="table__cell">
             <h3 class="table__heading">17–20 лет</h3>
-            <p class="teable__text">Пик обучаемости</p>
+            <p class="table__text">Пик обучаемости</p>
           </div>
           <div class="table__cell">
             <h3 class="table__heading">1885 год</h3>
-            <p class="teable__text">Открытие кривой забывания</p>
+            <p class="table__text">Открытие кривой забывания</p>
           </div>
           <div class="table__cell">
             <h3 class="table__heading">1889 год</h3>
-            <p class="teable__text">Открытие условного рефлекса</p>
+            <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
@@ -84,43 +84,43 @@
         <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
-            <p class="teable__text teable__text_theme_dark">Выберите привлекательный проект.</p>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">2</h3>
-            <p class="teable__text teable__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">3</h3>
-            <p class="teable__text teable__text_theme_dark">Определите целевой уровень мастерства.</p>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">4</h3>
-            <p class="teable__text teable__text_theme_dark">Разбейте навык на элементы.</p>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">5</h3>
-            <p class="teable__text teable__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">6</h3>
-            <p class="teable__text teable__text_theme_dark">Устраните препятствия для занятий.</p>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">7</h3>
-            <p class="teable__text teable__text_theme_dark">Выделите специальное время для занятий.</p>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">8</h3>
-            <p class="teable__text teable__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">9</h3>
-            <p class="teable__text teable__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">10</h3>
-            <p class="teable__text teable__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
          <div class="kaufman__triangle"></div>
@@ -129,43 +129,47 @@
 
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column footer__column__content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <a href="#" class="logo logo_place_footer"></a>
           <p class="footer__autor">&copy; 2019. Виктор Абанькин</p>
         </div>
-      <div class="footer__column footer__column_info">
-        <h3 class="footer__column_heading">О Практикуме</h3>
-        <ul class="footer__column_links">
-          <li class="footer__column_link">
-             <a href="#" class="footer__column_link_item">Главная</a>
-          </li>
-          <li class="footer__column_link">
-            <a href="#" class="footer__column_link_item">Концепция</a>
-         </li>
-         <li class="footer__column_link">
-          <a href="#" class="footer__column_link_item">Наставники</a>
-       </li>
-        </ul>
+      <div class="footer__column footer__column_content_info">
+        <h3 class="footer__column-heading">О Практикуме</h3>
+        <nav>
+          <ul class="footer__column_links">
+            <li class="footer__column_link">
+              <a href="#" class="footer__column_link_item">Главная</a>
+            </li>
+            <li class="footer__column_link">
+              <a href="#" class="footer__column_link_item">Концепция</a>
+            </li>
+            <li class="footer__column_link">
+              <a href="#" class="footer__column_link_item">Наставники</a>
+            </li>
+          </ul>
+      </nav>  
         </div>
-      <div class="footer__column footer__column_social">
-        <h3 class="footer__column_heading">Соцсети</h3>
-        <ul class="footer__column_links">
-          <li class="footer__column_link">
-            <a href="#" class="footer__column_link_item">
-              <img src="images/facebook_color_white.svg" alt="facebook" class="footer__social_icon"> Facebook
-            </a>
-          </li>
-          <li class="footer__column_link">
-            <a href="#" class="footer__column_link_item">
-              <img src="images/vk_color_white.svg" alt="vk" class="footer__social_icon"> Вконтакте
-            </a>
-          </li>
-          <li class="footer__column_link">
-            <a href="#" class="footer__column_link_item">
-              <img src="images/instagram_color_white.svg" alt="instagram" class="footer__social_icon"> instagram
-            </a>
-          </li>
-        </ul>
+      <div class="footer__column footer__column_content_social">
+        <h3 class="footer__column-heading">Соцсети</h3>
+        <nav>
+          <ul class="footer__column_links">
+            <li class="footer__column_link">
+              <a href="#" class="footer__column_link_item">
+                <img src="images/facebook_color_white.svg" alt="facebook" class="footer__social-icon"> Facebook
+              </a>
+            </li>
+            <li class="footer__column_link">
+              <a href="#" class="footer__column_link_item">
+                <img src="images/vk_color_white.svg" alt="vk" class="footer__social-icon"> Вконтакте
+              </a>
+            </li>
+            <li class="footer__column_link">
+              <a href="#" class="footer__column_link_item">
+                <img src="images/instagram_color_white.svg" alt="instagram" class="footer__social-icon"> instagram
+              </a>
+            </li>
+          </ul>
+        </nav>
       </div>
       </div>
     </footer>
