Исправила ошибки в стилях и верстке

--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@
       <div class="footer__column footer__column_content_info">
         <h3 class="footer__column-heading">О Практикуме</h3>
         <nav>
-          <ul class="footer__column_links">
-            <li class="footer__column_link">
-              <a href="#" class="footer__column_link_item">Главная</a>
+          <ul class="footer__column-links">
+            <li class="footer__column-link">
+              <a href="#" class="footer__column-link-item">Главная</a>
             </li>
-            <li class="footer__column_link">
-              <a href="#" class="footer__column_link_item">Концепция</a>
+            <li class="footer__column-link">
+              <a href="#" class="footer__column-link-item">Концепция</a>
             </li>
-            <li class="footer__column_link">
-              <a href="#" class="footer__column_link_item">Наставники</a>
+            <li class="footer__column-link">
+              <a href="#" class="footer__column-link-item">Наставники</a>
             </li>
           </ul>
       </nav>  
@@ -152,19 +152,19 @@
       <div class="footer__column footer__column_content_social">
         <h3 class="footer__column-heading">Соцсети</h3>
         <nav>
-          <ul class="footer__column_links">
-            <li class="footer__column_link">
-              <a href="#" class="footer__column_link_item">
+          <ul class="footer__column-links">
+            <li class="footer__column-link">
+              <a href="#" class="footer__column-link-item">
                 <img src="images/facebook_color_white.svg" alt="facebook" class="footer__social-icon"> Facebook
               </a>
             </li>
-            <li class="footer__column_link">
-              <a href="#" class="footer__column_link_item">
+            <li class="footer__column-link">
+              <a href="#" class="footer__column-link-item">
                 <img src="images/vk_color_white.svg" alt="vk" class="footer__social-icon"> Вконтакте
               </a>
             </li>
-            <li class="footer__column_link">
-              <a href="#" class="footer__column_link_item">
+            <li class="footer__column-link">
+              <a href="#" class="footer__column-link-item">
                 <img src="images/instagram_color_white.svg" alt="instagram" class="footer__social-icon"> instagram
               </a>
             </li>
