--- a/index.html
+++ b/index.html
@@ -254,18 +254,15 @@
           <ul class="footer__column-links">
             <li class="footer__column-link">
               <a href="#" class="footer__column-link-item">
-                <img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon"> Facebook
-              </a>
+                <img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon"> Facebook</a>
             </li>
             <li class="footer__column-link">
               <a href="#" class="footer__column-link-item">
-                <img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social-icon"> Вконтакте
-              </a>
+                <img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social-icon"> Вконтакте</a>
             </li>
             <li class="footer__column-link">
               <a href="#" class="footer__column-link-item">
-                <img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon"> instagram
-              </a>
+                <img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon"> instagram</a>
             </li>
           </ul>
         </nav>
