--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             </li>
             <li class="footer__column-link">
               <a href="#" class="footer__column-link-item">
-                <img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon"> instagram</a>
+                <img src="./images/instagram_color_white.svg" alt="Инстаграм иконка" class="footer__social-icon"> instagram</a>
             </li>
           </ul>
         </nav>
